History of feedfeeder
=====================

2.0.6 (unreleased)
------------------

- Nothing changed yet.


2.0.5 (2011-09-03)
------------------

- Use feed-item.pt on Plone 4, filling the content-core slot, and
  feed-item3.pt on Plone 3, filling the body slot as before.
  Fixes http://plone.org/products/feedfeeder/issues/36
  [maurits]

- Register our own documentbyline viewlet for feed items, which
  displays the feed item author as creator.
  Refs http://plone.org/products/feedfeeder/issues/36
  [Maurits]

- Fixed possible UnicodeDecodeError when updating feed items.
  Refs http://plone.org/products/feedfeeder/issues/37
  [maurits]

- Fixed Plone 4.1 compatibility
  [iElectric]


2.0.4 (2011-03-24)
------------------

- Avoid DeprecationWarning on python2.6 by preferring hashlib over md5
  when available.
  [maurits]

- Do not reindex the feed item when nothing has changed.  Only update
  the objectInfo field when there has been a change.
  Fixes http://plone.org/products/feedfeeder/issues/34
  [maurits]


2.0.3 (2011-01-17)
------------------

- Respect the Plone setting on the 'about' information: only show the
  document byline if the user is logged in or anonymous users are
  allowed to view the about information.
  [markvl]


2.0.2 (2010-12-17)
------------------

- Modified import RSS and added a new field on feed items named 
  objectInfo. All feed data will be stored on this field, 
  as a python dict.
  Just changing the remote RSS template, you will able to memoize 
  additional info without having to modify the feed item schema.
  [dmoro]

- Added an option on feed folder that let you choose to redirect 
  automatically to remote resources. If you have modify permissions 
  on feed items there will not be any redirect
  [dmoro]

- Added new tests
  [sithmel]


2.0.1 (2010-11-26)
------------------

- Added @@feed-mega-update view so you can update all feed folders at
  once, for example in a clock server.
  [miohtoma]
