@@ -4,7 +4,9 @@ History of feedfeeder
 2.0.6 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Guard against links (enclosures) not having a type.
+  Fixes http://plone.org/products/feedfeeder/issues/39
+  [maurits]
 
 
 2.0.5 (2011-09-03)
